--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -1,75 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/screenBackground"
-   >
-
-<LinearLayout
+    android:layout_height="match_parent"
     android:id="@+id/rootLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/_7sdp"
+    android:padding="@dimen/_10sdp"
     android:orientation="vertical"
-    >
+    android:background="@color/screenBackground">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_125sdp"
+        android:layout_height="@dimen/_170sdp"
         >
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/ic_wallet_bg"
-            android:padding="@dimen/_3sdp">
+            android:background="@drawable/ic_wallet_bg">
 
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textWalletBal"
+            <TextView
+                android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_7sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_margin="@dimen/_10sdp"
                 android:text="@string/lpesa_wallet_balance"
-                android:textSize="@dimen/_11sdp"
+                android:textSize="@dimen/_10sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorWhite"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.app.l_pesa.common.CommonTextRegular
+            <TextView
                 android:id="@+id/txtWalletBal"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorWhite"
-                android:textSize="@dimen/_15sdp"
-                android:layout_below="@+id/textWalletBal"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_marginStart="@dimen/_7sdp"
-                />
+                android:textSize="@dimen/_18sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-
-
-            <com.app.l_pesa.common.CommonTextRegular
+            <TextView
                 android:id="@+id/txtCommission"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:fontFamily="@font/montserrat"
-                android:textSize="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
                 android:textColor="@color/colorWhite"
-                android:text="@string/commission_for_l_pesa"
-                android:gravity="center"
-                android:layout_alignParentBottom="true"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/txt_min"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_25sdp"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/txtCommission"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtWalletBal" />
+
+            <TextView
+                android:id="@+id/txt_max"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_25sdp"
+                android:layout_marginEnd="@dimen/_30sdp"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/txtCommission"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtWalletBal" />
 
 
-                />
 
-        </RelativeLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
@@ -82,14 +96,14 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_7sdp">
+            android:layout_height="match_parent">
 
             <com.app.l_pesa.common.CommonInputLayout
                 android:id="@+id/commonInputLayout5"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="@dimen/_10sdp"
                 app:layout_constraintBottom_toTopOf="@+id/buttonWithdraw"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -104,31 +118,27 @@
                     android:textColor="@color/dark_text_color"
                     android:inputType="numberSigned"
                     android:textSize="@dimen/_12sdp"
-                    android:maxLength="6"
-                    />
+                    android:maxLength="6" />
 
 
             </com.app.l_pesa.common.CommonInputLayout>
 
-            <com.app.l_pesa.common.CustomButtonRegular
+            <Button
                 android:id="@+id/buttonWithdraw"
                 style="?android:attr/borderlessButtonStyle"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_32sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_margin="@dimen/_10sdp"
                 android:background="@drawable/ripple_green_button"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/withdraw"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:textStyle="bold"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintTop_toBottomOf="@+id/commonInputLayout5"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginBottom="@dimen/_2sdp"/>
+                app:layout_constraintStart_toStartOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -139,6 +149,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:weightSum="1"
         >
 
@@ -163,4 +175,3 @@
     </LinearLayout>
 
 </LinearLayout>
-</ScrollView>
