--- a/app/src/main/res/layout/layout_loan_history.xml
+++ b/app/src/main/res/layout/layout_loan_history.xml
@@ -256,30 +256,25 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:paddingStart="@dimen/_3sdp"
+                        android:weightSum="1"
+                        android:layout_gravity="center"
                         >
 
-                        <RelativeLayout
+                        <ImageView
+                            android:id="@+id/img_status"
+                            android:contentDescription="@string/app_name"
                             android:layout_width="0dp"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_weight=".20"
-                            android:gravity="center"
-                            >
+                            android:layout_gravity="center"
 
-                            <ImageView
-                                android:id="@+id/img_status"
-                                android:contentDescription="@string/app_name"
-                                android:layout_width="@dimen/_20sdp"
-                                android:layout_height="@dimen/_20sdp"
+                            />
 
-                                />
-
-
-                        </RelativeLayout>
 
                         <com.app.l_pesa.common.CommonTextRegular
                             android:id="@+id/txt_status"
                             android:layout_width="0dp"
-                            android:layout_weight=".80"
+                            android:layout_weight=".60"
                             android:layout_height="match_parent"
                             android:paddingStart="@dimen/_2sdp"
                             android:gravity="center|start"
@@ -288,6 +283,18 @@
                             android:fontFamily="@font/montserrat"
                             android:textColor="#8e8963"
                             android:textSize="@dimen/_10sdp" />
+
+                        <ImageView
+                            android:id="@+id/img_delete"
+                            android:contentDescription="@string/app_name"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight=".20"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_delete"
+                            android:visibility="invisible"
+
+                            />
 
 
                     </LinearLayout>
