--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -36,7 +36,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
+            <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtWalletBal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -61,15 +61,229 @@
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWalletBal"
+               app:layout_constraintBottom_toTopOf="@+id/layoutBal"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />
+
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/layoutBal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dividerOne"
+            >
+
+            <View
+                android:id="@+id/dividerTwo"
+                android:layout_width="@dimen/_1sdp"
+                android:layout_height="0dp"
+                android:visibility="invisible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+               />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_min"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:gravity="center"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorSemiBlack"
+                android:textSize="@dimen/_12sdp"
+                android:text="@string/min_withdrawal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/dividerTwo"
+                app:layout_constraintBottom_toTopOf="@+id/txt_min_val"
+                />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_min_val"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorTextBlack"
+                android:textSize="@dimen/_14sdp"
+                android:padding="@dimen/_2sdp"
+                app:layout_constraintTop_toBottomOf="@+id/txt_min"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/dividerTwo"
+
+                />
+
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_max"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:gravity="center"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorSemiBlack"
+                android:textSize="@dimen/_12sdp"
+                android:text="@string/max_withdrawal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/dividerTwo"
+                app:layout_constraintBottom_toTopOf="@+id/txt_max_val"
+                />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_max_val"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorTextBlack"
+                android:textSize="@dimen/_14sdp"
+                android:padding="@dimen/_2sdp"
+                app:layout_constraintTop_toBottomOf="@+id/txt_max"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/dividerTwo"
+
+                />
+
+        </android.support.constraint.ConstraintLayout>
+
+
+            <View
+                android:id="@+id/dividerThree"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_1sdp"
+                android:background="@color/divider_color"
+                app:layout_constraintBottom_toTopOf="@+id/txtCommission"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/layoutBal"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                />
+
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtCommission"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/_2sdp"
+                android:text="@string/commission_for_l_pesa"
+                android:textSize="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorSemiBlack"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/dividerThree" />
+
+
+        </android.support.constraint.ConstraintLayout>
+
+
+
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_15sdp"
+        card_view:cardCornerRadius="@dimen/_10sdp"
+        app:cardBackgroundColor="@color/colorWhite"
+        >
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.app.l_pesa.common.CommonInputLayout
+                android:id="@+id/commonInputLayout5"
+                style="@style/customInputLayoutStyle"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_margin="@dimen/_10sdp"
+                app:layout_constraintBottom_toTopOf="@+id/buttonWithdraw"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.app.l_pesa.common.CommonEditTextRegular
+                    android:id="@+id/etWithdrawalAmount"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:hint="@string/withdrawal_amount"
+                    android:inputType="numberSigned"
+                    android:textSize="@dimen/_12sdp"
+                    android:longClickable="false"
+                    android:textIsSelectable="false"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/colorTextBlack"
+                    android:textColorHint="@color/colorTextBlackLight"
+                    android:maxLength="6" />
+
+
+            </com.app.l_pesa.common.CommonInputLayout>
+
+            <Button
+                android:id="@+id/buttonWithdraw"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_32sdp"
+                android:layout_margin="@dimen/_10sdp"
+                android:background="@drawable/ripple_green_button"
+                android:fontFamily="@font/montserrat"
+                android:text="@string/withdraw"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:weightSum="1"
+        >
+
+        <ImageButton
+            android:id="@+id/imgTransactionHistory"
+            android:contentDescription="@string/app_name"
+            android:layout_width="0dp"
+            android:layout_weight=".50"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginEnd="@dimen/_7sdp"
+            android:background="@drawable/ic_wallet_transaction_history_bg" />
+
+        <ImageButton
+            android:id="@+id/imgWithdrawalHistory"
+            android:contentDescription="@string/app_name"
+            android:layout_width="0dp"
+            android:layout_weight=".50"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginStart="@dimen/_7sdp"
+            android:background="@drawable/ic_wallet_withdrawal_history_bg" />
+
+    </LinearLayout>
 
 </LinearLayout>
