--- a/app/src/main/res/drawable/ic_marital_status_icon.xml
+++ b/app/src/main/res/drawable/ic_marital_status_icon.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="48"
-    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/_22sdp" android:viewportHeight="48"
+    android:viewportWidth="48" android:width="@dimen/_22sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#E8BCBC" android:pathData="M32.995,31.949c0,0 -8.556,-3.666 -8.556,-10.812s5.83,-6.3 7.428,-5.83c0,0 9.214,-5.547 12.598,2.069C47.943,25.202 40.423,31.291 32.995,31.949z"/>
     <path android:fillColor="#F4D695" android:pathData="M15.254,31.01c0,0 8.556,-3.668 8.556,-10.813c0,-7.146 -5.829,-6.3 -7.427,-5.83c0,0 -9.214,-5.547 -12.599,2.069C0.307,24.262 7.827,30.352 15.254,31.01z"/>
     <path android:fillColor="#455A63" android:pathData="M37.449,15.067c-1.914,0 -3.888,0.796 -5.65,2.264c-1.766,-1.468 -3.74,-2.264 -5.649,-2.264c-3.495,0 -5.931,2.689 -5.931,6.545c0,1.5 0.6,3.042 1.485,4.534c0.672,-0.814 1.244,-1.609 1.647,-2.358c-0.34,-0.756 -0.546,-1.488 -0.546,-2.178c0,-2.439 1.278,-3.954 3.339,-3.954c1.534,0 3.26,0.853 4.733,2.342l0.921,0.93l0.917,-0.93c1.478,-1.488 3.196,-2.342 4.733,-2.342c2.06,0 3.341,1.515 3.341,3.954c0,3.77 -5.932,8.991 -8.991,11.288c-1.417,-1.06 -3.429,-2.753 -5.2,-4.628c-0.512,0.712 -1.061,1.399 -1.646,2.055c2.648,2.756 5.526,4.833 6.098,5.236l0.743,0.516l0.741,-0.516c1.105,-0.777 10.84,-7.769 10.84,-13.951C43.377,17.757 40.942,15.067 37.449,15.067z"/>
