--- a/app/src/main/res/drawable/ic_mother_name_icon.xml
+++ b/app/src/main/res/drawable/ic_mother_name_icon.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="48"
-    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/_22sdp" android:viewportHeight="48"
+    android:viewportWidth="48" android:width="@dimen/_22sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#E8BCBC" android:pathData="M25.24,32.557m-12.761,0a12.761,12.761 0,1 1,25.522 0a12.761,12.761 0,1 1,-25.522 0"/>
     <path android:fillColor="#455A63" android:pathData="M23.794,20.496c-6.197,-0.019 -11.688,3.993 -13.554,9.903c-0.235,0.741 0.174,1.533 0.916,1.77c0.741,0.234 1.533,-0.175 1.769,-0.916c1.907,-6.006 8.321,-9.329 14.327,-7.423c3.608,1.145 6.412,4.004 7.488,7.634c0.288,0.723 1.107,1.074 1.83,0.786c0.628,-0.251 0.989,-0.914 0.859,-1.579C35.613,24.651 30.081,20.523 23.794,20.496z"/>
     <path android:fillColor="#F4D695" android:pathData="M23.917,11.469m-6.07,0a6.07,6.07 0,1 1,12.14 0a6.07,6.07 0,1 1,-12.14 0"/>
